# claude-code-python

./: .gitignore  README.md  README_zh.md  pyproject.toml  snake_game.py
.github/workflows/: deploy-pages.yml
docs/: index.html  main.js  styles.css
examples/: run_subagent_demo_live.py  subagent_demo_live_prompt.txt  subagent_demo_live_prompt_zh.txt  subagent_demo_live_run_record.md  subagent_demo_live_trace.json  task_demo_prompt.txt  task_demo_prompt_zh.txt
examples/subagent_demo_workspace/: inventory.txt  staffing.txt
src/claude_code_python/: cli.py  config.py  model.py  runtime.py
src/claude_code_python/tools/: __init__.py  base.py  bash.py  filesystem.py  task.py  todo.py
